Prevented "page-jumping" on scroll / non scroll

--- a/web/assets/sass/styles.scss
+++ b/web/assets/sass/styles.scss
@@ -18,6 +18,7 @@ $font-head: 'Raleway', 'Helvetica Neue', Tahoma, sans-serif;
 body {
 	font-family: $font-stack;
 	font-weight: 400;
+        overflow-y: scroll;
 }
 
 a {
